--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "youtube-transcript-api": "^3.0.6"
+    "youtube-transcript": "^1.2.1"
   }
 }
